@@ -9,9 +9,9 @@ package com.sixsq.slipstream.connector;
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -19,12 +19,6 @@ package com.sixsq.slipstream.connector;
  * limitations under the License.
  * -=================================================================-
  */
-
-import java.lang.reflect.InvocationTargetException;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
 
 import com.sixsq.slipstream.configuration.Configuration;
 import com.sixsq.slipstream.exceptions.ConfigurationException;
@@ -36,204 +30,221 @@ import com.sixsq.slipstream.persistence.ServiceCatalogs;
 import com.sixsq.slipstream.persistence.ServiceConfiguration.RequiredParameters;
 import com.sixsq.slipstream.persistence.User;
 
+import java.lang.reflect.InvocationTargetException;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+
 public class ConnectorFactory {
 
-	private static Map<String, Connector> connectors = null;
-	private static List<String> cloudServiceNames = null;
+    private static Map<String, Connector> connectors = null;
 
-	public static Connector getCurrentConnector(User user)
-			throws ConfigurationException, ValidationException {
-		String cloudServiceName = getDefaultCloudServiceName(user);
+    public static Connector getCurrentConnector(User user) throws ConfigurationException, ValidationException {
+        String cloudServiceName = getDefaultCloudServiceName(user);
 
-		if ("".equals(cloudServiceName)) {
-			// user not configured, we take the first connector
-			cloudServiceName = getConnectors().entrySet().iterator().next()
-					.getKey();
-		}
+        if ("".equals(cloudServiceName)) {
+            // user not configured, we take the first connector
+            cloudServiceName = getConnectors().entrySet().iterator().next().getKey();
+        }
 
-		if (!Parameter.hasValueSet(cloudServiceName)) {
-			throwIncompleteUserCloudConfiguration(user);
-		}
+        if (!Parameter.hasValueSet(cloudServiceName)) {
+            throwIncompleteUserCloudConfiguration(user);
+        }
 
-		return getConnector(cloudServiceName);
-	}
+        return getConnector(cloudServiceName);
+    }
 
-	protected static void throwIncompleteUserCloudConfiguration(User user)
-			throws ValidationException {
-		throw new ValidationException(
-				incompleteCloudConfigurationErrorMessage(user));
-	}
+    protected static void throwIncompleteUserCloudConfiguration(User user) throws ValidationException {
+        throw new ValidationException(incompleteCloudConfigurationErrorMessage(user));
+    }
 
-	public static String incompleteCloudConfigurationErrorMessage(User user) {
-		return "Incomplete cloud configuration. Consider editing your <a href='"
-				+ "/user/" + user.getName() + "?edit=true'>user account</a>";
-	}
+    public static String incompleteCloudConfigurationErrorMessage(User user) {
+        return "Incomplete cloud configuration. Consider editing your <a href='" + "/user/" + user
+                .getName() + "?edit=true'>user account</a>";
+    }
 
-	public static Connector getConnector(String cloudServiceName)
-			throws ConfigurationException, ValidationException {
-		Connector connector = getConnectors().get(cloudServiceName);
-		if (connector == null) {
-			throw (new ValidationException("Failed to load cloud connector: "
-					+ cloudServiceName));
-		}
-		return connector.copy();
-	}
+    public static Connector getConnector(String cloudServiceName) throws ConfigurationException, ValidationException {
+        Connector connector = getConnectors().get(cloudServiceName);
+        if (connector == null) {
+            throw new ValidationException("Failed to load cloud connector: " + cloudServiceName);
+        }
+        return connector.copy();
+    }
 
-	public static Connector getConnector(String cloudServiceName, User user)
-			throws ConfigurationException, ValidationException {
-		if (CloudService.isDefaultCloudService(cloudServiceName)) {
-			cloudServiceName = getDefaultCloudServiceName(user);
-			if ("".equals(cloudServiceName)) {
-				throw new ValidationException("Missing default cloud in user");
-			}
-		}
+    public static Connector getConnector(String cloudServiceName, User user) throws ConfigurationException,
+            ValidationException {
+        if (CloudService.isDefaultCloudService(cloudServiceName)) {
+            cloudServiceName = getDefaultCloudServiceName(user);
+            if ("".equals(cloudServiceName)) {
+                throw new ValidationException("Missing default cloud in user");
+            }
+        }
 
-		return getConnector(cloudServiceName);
-	}
+        return getConnector(cloudServiceName);
+    }
 
-	public static Connector instantiateConnectorFromName(
-			String connectorClassName) throws InstantiationException,
-			IllegalAccessException, InvocationTargetException,
-			NoSuchMethodException, ClassNotFoundException {
-		return (Connector) Class.forName(connectorClassName).getConstructor()
-				.newInstance();
-	}
+    public static Connector instantiateConnectorFromName(String connectorClassName) throws InstantiationException,
+            IllegalAccessException, InvocationTargetException, NoSuchMethodException, ClassNotFoundException {
+        return (Connector) Class.forName(connectorClassName).getConstructor().newInstance();
+    }
 
-	public static String getDefaultCloudServiceName(User user) {
-		return user.getDefaultCloudService();
-	}
+    public static String getDefaultCloudServiceName(User user) {
+        return user.getDefaultCloudService();
+    }
 
-	private static Connector loadConnector(String className)
-			throws ConfigurationException {
-		return loadConnector(className, null);
-	}
+    private static Connector loadConnector(String cloudServiceName) throws ConfigurationException {
+        return loadConnector(cloudServiceName, null);
+    }
 
-	private static Connector loadConnector(String className, String instanceName)
-			throws ConfigurationException {
-		try {
-			if (instanceName == null) {
-				return (Connector) Class.forName(className.trim())
-						.getConstructor().newInstance();
-			} else {
-				return (Connector) Class.forName(className.trim())
-						.getConstructor(String.class).newInstance(instanceName);
-			}
-		} catch (Exception e) {
-			throw new SlipStreamRuntimeException(e.getClass().toString() + " "
-					+ e.getMessage());
-		}
-	}
+    private static Connector loadConnector(String cloudServiceName, String instanceName) throws ConfigurationException {
+        try {
 
-	public static void resetConnectors() {
-		connectors = null;
-		cloudServiceNames = null;
-	}
+            DiscoverableConnectorService svc = DiscoverableConnectorServiceLoader.getConnectorService(cloudServiceName);
+            if (svc != null) {
+                return svc.getInstance(instanceName);
+            } else {
+                throw new SlipStreamRuntimeException(
+                        "cannot load cloud connector for " + cloudServiceName + " using key " +
+                                convertClassNameToServiceName(cloudServiceName)
+                );
+            }
 
-	public static void setConnectors(Map<String, Connector> connectors) {
-		ConnectorFactory.connectors = connectors;
+        } catch (Exception e) {
+            throw new SlipStreamRuntimeException(e.getClass().getName() + " " + e.getMessage());
+        }
+    }
 
-		cloudServiceNames = new ArrayList<String>();
+    public static void resetConnectors() {
+        connectors = null;
+    }
 
-		for (Connector connector : connectors.values()) {
-			setServiceName(connector);
-		}
-	}
+    public static void setConnectors(Map<String, Connector> inputConnectors) {
+        Map<String, Connector> connectors = new HashMap<String, Connector>();
+        connectors.putAll(inputConnectors);
+        ConnectorFactory.connectors = Collections.unmodifiableMap(connectors);
+    }
 
-	protected static void setServiceName(Connector connector) {
-		cloudServiceNames.add(connector.getConnectorInstanceName());
-	}
+    public static Map<String, Connector> getConnectors(String[] classNames) throws ConfigurationException {
+        if (connectors == null) {
+            initializeConnectors(classNames);
+        }
+        return connectors;
+    }
 
-	public static Map<String, Connector> getConnectors(String[] classeNames)
-			throws ConfigurationException {
+    public static void initializeConnectors(String[] classNames) throws ConfigurationException {
 
-		if (connectors != null) {
-			return connectors;
-		}
+        Map<String, Connector> connectors = new HashMap<String, Connector>();
 
-		connectors = new HashMap<String, Connector>();
+        Map<String, String> instanceNames = processConnectorInstanceConfig(classNames);
+        for (Map.Entry<String, String> entry : instanceNames.entrySet()) {
+            String instanceName = entry.getKey();
+            String cloudServiceName = entry.getValue();
 
-		cloudServiceNames = new ArrayList<String>();
-		for (String c : classeNames) {
-			String[] nameAndClassName = c.split(":");
+            Connector connector = loadConnector(cloudServiceName);
+            connectors.put(instanceName, connector);
+        }
 
-			boolean isNamed = nameAndClassName.length > 1;
-			String className = (isNamed) ? nameAndClassName[1]
-					: nameAndClassName[0];
+        setConnectors(connectors);
 
-			String name = "";
-			Connector connector;
-			if (isNamed) {
-				name = nameAndClassName[0].trim();
-				connector = loadConnector(className, name);
-			} else {
-				connector = loadConnector(className);
-				name = connector.getConnectorInstanceName();
-			}
+        updateServiceCatalog(connectors.keySet());
+    }
 
-			connectors.put(name, connector);
-			setServiceName(connector);
-		}
+    private static Map<String, String> processConnectorInstanceConfig(String[] instances) {
 
-		updateServiceCatalog();
-		
-		return connectors;
-	}
+        Map<String, String> instanceMap = new HashMap<String, String>();
 
-	private static void updateServiceCatalog() {
-		ServiceCatalogs scs = new ServiceCatalogs();
-		for(ServiceCatalog sc : scs.getList()) {
-			if(!cloudServiceNames.contains(sc.getCloud())) {
-				sc.remove();
-			}
-		}
-		for(String cloud : cloudServiceNames) {
-			boolean foundIt = false;
-			for(ServiceCatalog sc : scs.getList()) {
-				if(sc.getCloud().equals(cloud)) {
-					foundIt = true;
-					break;
-				}
-			}
-			if(!foundIt) {
-				ServiceCatalog sc = new ServiceCatalog(cloud);
-				sc = sc.store();
-				scs.getList().add(sc);
-			}
-		}
-	}
+        for (String c : instances) {
 
-	public static Map<String, Connector> getConnectors()
-			throws ConfigurationException, ValidationException {
-		return getConnectors(getConnectorClassNames());
-	}
+            // A connector ID (either cloud service name or class name) with an optional instance name.
+            String[] namePair = c.split(":");
 
-	public static String[] getConnectorClassNames()
-			throws ConfigurationException, ValidationException {
-		String connectorsClassNames = Configuration.getInstance()
-				.getRequiredProperty(
-						RequiredParameters.CLOUD_CONNECTOR_CLASS.getName());
+            boolean isNamed = namePair.length > 1;
 
-		return splitConnectorClassNames(connectorsClassNames);
-	}
+            // The loader will maintain compatibility for configurations with raw class names
+            // rather than just the service names.
+            String cloudServiceName = (isNamed) ? namePair[1].trim() : namePair[0].trim();
 
-	public static String[] splitConnectorClassNames(String connectorsClassNames) {
-		if(connectorsClassNames == null || connectorsClassNames.trim().isEmpty()) {
-			return new String[0];
-		}
-		return connectorsClassNames.split(",");
-	}
+            // Default to cloud service name if no instance name is given.
+            String instanceName = (isNamed) ? namePair[0].trim() : convertClassNameToServiceName(cloudServiceName);
 
-	public static List<String> getCloudServiceNamesList()
-			throws ConfigurationException, ValidationException {
-		if (cloudServiceNames == null) {
-			// will also set the cloud service names
-			getConnectors();
-		}
-		return new ArrayList<String>(cloudServiceNames);
-	}
+            instanceMap.put(instanceName, cloudServiceName);
+        }
+        return instanceMap;
+    }
 
-	public static String[] getCloudServiceNames()
-			throws ConfigurationException, ValidationException {
-		return getCloudServiceNamesList().toArray(new String[0]);
-	}
+    // If the argument looks to be a class name, then derive the cloud service name from the class name.  The cloud
+    // service name will be the penultimate value when split on periods.  If there are no periods in the value,
+    // then just return the value itself.
+    public static String convertClassNameToServiceName(String configConnectorName) {
+        String[] elements = configConnectorName.split("\\.");
+        if (elements.length > 1) {
+            String name = elements[elements.length - 2];
+
+            // Special case for the EC2 connector which doesn't follow the usual naming scheme of
+            // residing is a directory named after the cloud service name.  (Directory is 'aws' but
+            // the cloud service name is 'ec2'.)
+            if ("aws".equals(name)) {
+                return "ec2";
+            } else {
+                return name;
+            }
+        } else {
+            return configConnectorName;
+        }
+    }
+
+    private static void updateServiceCatalog(Set<String> cloudServiceNames) {
+
+        ServiceCatalogs scs = new ServiceCatalogs();
+        for (ServiceCatalog sc : scs.getList()) {
+            if (!cloudServiceNames.contains(sc.getCloud())) {
+                sc.remove();
+            }
+        }
+        for (String cloud : cloudServiceNames) {
+            boolean foundIt = false;
+            for (ServiceCatalog sc : scs.getList()) {
+                if (sc.getCloud().equals(cloud)) {
+                    foundIt = true;
+                    break;
+                }
+            }
+            if (!foundIt) {
+                ServiceCatalog sc = new ServiceCatalog(cloud);
+                sc = sc.store();
+                scs.getList().add(sc);
+            }
+        }
+    }
+
+    public static Map<String, Connector> getConnectors() throws ConfigurationException, ValidationException {
+        return getConnectors(getConnectorClassNames());
+    }
+
+    public static String[] getConnectorClassNames() throws ConfigurationException, ValidationException {
+        String connectorsClassNames = Configuration.getInstance().getRequiredProperty(
+                RequiredParameters.CLOUD_CONNECTOR_CLASS.getName());
+
+        return splitConnectorClassNames(connectorsClassNames);
+    }
+
+    public static String[] splitConnectorClassNames(String connectorsClassNames) {
+        if (connectorsClassNames == null || connectorsClassNames.trim().isEmpty()) {
+            return new String[0];
+        }
+        return connectorsClassNames.split(",");
+    }
+
+    public static List<String> getCloudServiceNamesList() throws ConfigurationException, ValidationException {
+        return new ArrayList<String>(getConnectors().keySet());
+    }
+
+    public static String[] getCloudServiceNames() throws ConfigurationException, ValidationException {
+        List<String> names = getCloudServiceNamesList();
+        return names.toArray(new String[names.size()]);
+    }
+
 }
